# cursos-python

./: .gitignore  2021_web_scraping_http_inicial.ipynb  2021_web_scraping_http_inicial_solucion.ipynb  LICENSE  LICENSE.md  README.md  _config.yml  _toc.yml  intro.md
APIs/: README.md  requirements.txt
AnalisisDeDatos/: README.md
Audio/: Audio I.ipynb  Audio_III.ipynb
Automatizacion/: README.md  automatizacion_pygui_bash_os.ipynb  automatizacion_pygui_bash_os_sol.ipynb  automatizacion_pyguyi_bash_os.ipynb  edicion_imagenes.ipynb  expresiones_regulares.ipynb  expresiones_regulares_sol.ipynb  gsheets_pytrends.ipynb  organizando_pdfs.ipynb
BasesDeDatos/: README.md
DatosGeograficos/: README.md
DeepLearning/: README.md
GCP/: Aporte Layla
General/: referencias.ipynb
IngenieriaDeDatosGCP/: README.md
Introduccion/: README.md
MachineLearning/: Ejemplo_Sentiment.ipynb  Introduccion_a_ML.ipynb  Introducción a ML.ipynb  Machine_Learning_II.ipynb  Machine_Learning_II_Solution.ipynb  Overview_Sklearn_Titanic.ipynb  README.md  ppt2ipynb.ipynb  titanic.csv
MatematicasParaIA/: README.md
MatematicasParaML/: README.md
NLP/: README.md
NeuroIA/: deep_learning_ok.ipynb  ejercicios_estadistica.ipynb  ejercicios_ml.ipynb  holland_viz.ipynb  intro_a_ml.ipynb  mypersonality.ipynb  no_supervisado_nlp_social_listening.ipynb  pseudocódigo.ipynb  sentiment.ipynb  sklearn_titanic.ipynb  supervisado_okcupid.ipynb  tiempo_de_reaccion.ipynb  tiempo_de_reaccion_pygame.ipynb
PracticasDeDesarrollo/2_Desarrollo_II/2_Poetry/humai_demo/: pyproject.toml
PracticasDeDesarrollo/2_Desarrollo_II/2_Poetry/humai_demo/humai_demo/: main.py
PracticasDeDesarrollo/2_Desarrollo_II/2_Poetry/humai_demo/tests/: test_humai_demo.py
PracticasDeDesarrollo/2_Desarrollo_II/3_Tipado/: .gitignore  README.md  clase_02_typing.ipynb  classes.py  multi.py  multi_fixed.py  pyproject.toml
(+1226 files in other folders)
