[tool.poetry]
name = "humai_02_typing3"
version = "0.1.0"
description = "Paquete de ejemplo para la clase de tipado creado con poetry"
authors = ["Agustin Dye <agustin@deployr.ai>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Confugración de ejemplo para mypy
[tool.mypy]
disallow_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true